--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "bootstrap-rtl": "^3.3.4",
     "bootstrap-v4-rtl": "^4.1.1-1",
     "config": "^3.0.1",
+    "fullcalendar-jalaali": "^1.0.1",
     "history": "^4.7.2",
+    "jquery": "^3.3.1",
+    "moment": "^2.24.0",
+    "moment-jalaali": "^0.8.3",
     "react": "^16.7.0",
     "react-datepicker-persian": "^1.0.2",
     "react-dom": "^16.7.0",
