--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "react-files": "^2.4.8",
     "react-persian-calendar": "^1.0.3",
     "react-persian-datepicker": "^3.0.2",
-    "react-radio-buttons": "^1.2.2",
-    "react-radio-group": "^3.0.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.2",
     "redux": "^4.0.1",
+    "redux-i18n": "^1.5.15",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "validator": "^10.10.0"
