--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-files": "^2.4.8",
     "react-persian-calendar": "^1.0.3",
     "react-persian-datepicker": "^3.0.2",
+    "react-radio-group": "^3.0.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
