--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.2",
+    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-i18n": "^1.5.15",
     "redux-logger": "^3.0.6",
