--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.24.0",
     "moment-jalaali": "^0.8.3",
     "react": "^16.7.0",
+    "react-contexify": "^4.0.1",
     "react-datepicker-persian": "^1.0.2",
     "react-dom": "^16.7.0",
     "react-files": "^2.4.8",
@@ -27,6 +28,7 @@
     "react-persian-datepicker": "^3.0.2",
     "react-radio-group": "^3.0.3",
     "react-redux": "^6.0.0",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.2",
