--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-datepicker-persian": "^1.0.2",
     "react-dom": "^16.7.0",
     "react-files": "^2.4.8",
+    "react-loader-advanced": "^1.7.1",
     "react-persian-calendar": "^1.0.3",
     "react-persian-datepicker": "^3.0.2",
     "react-radio-group": "^3.0.3",
@@ -31,6 +32,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "2.1.2",
+    "react-toastify": "^4.5.2",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-i18n": "^1.5.15",
