--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fullcalendar-jalaali": "^1.0.1",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "material-ui-hichestan-datetimepicker": "^0.1.3",
     "moment": "^2.24.0",
     "moment-jalaali": "^0.8.3",
     "open-iconic": "^1.1.1",
