--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "open-iconic": "^1.1.1",
     "orgchart": "^2.1.2",
     "react": "^16.7.0",
+    "react-confirm-alert": "^2.4.1",
     "react-contexify": "^4.0.1",
     "react-datepicker-persian": "^1.0.2",
     "react-dom": "^16.7.0",
