--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@devexpress/dx-react-core": "^1.10.3",
     "@devexpress/dx-react-grid": "^1.10.3",
     "@devexpress/dx-react-grid-bootstrap4": "^1.10.0",
+    "@syncfusion/ej2-react-inputs": "^17.1.42",
     "ag-grid-community": "^19.1.4",
     "ag-grid-enterprise": "^19.1.4",
     "ag-grid-react": "^19.1.2",
