--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "moment-jalaali": "^0.8.3",
     "open-iconic": "^1.1.1",
     "orgchart": "^2.1.2",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-confirm-alert": "^2.4.1",
-    "react-contexify": "^4.0.1",
+    "react-contexify": "^4.1.0",
     "react-datepicker-persian": "^1.0.2",
     "react-dom": "^16.7.0",
     "react-files": "^2.4.8",
