--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "glob": "^7.1.2",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "material-ui": "^0.20.2",
     "material-ui-hichestan-datetimepicker": "^0.1.3",
     "moment": "^2.24.0",
     "moment-jalaali": "^0.8.3",
