--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-datepicker-persian": "^1.0.2",
     "react-dom": "^16.7.0",
     "react-files": "^2.4.8",
+    "react-grid-layout": "^0.16.6",
     "react-input-mask": "^2.0.4",
     "react-loader-advanced": "^1.7.1",
+    "react-number-format": "^4.3.0",
     "react-persian-calendar": "^1.0.3",
     "react-persian-datepicker": "^3.0.2",
     "react-radio-group": "^3.0.3",
