--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "orgchart": "^2.1.2",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
+    "react-color": "^2.17.3",
     "react-confirm-alert": "^2.4.1",
     "react-contexify": "^4.1.0",
     "react-datepicker-persian": "^1.0.2",
