--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-color": "^2.17.3",
     "react-confirm-alert": "^2.4.1",
     "react-contexify": "^4.1.0",
+    "react-cookie": "^4.0.3",
     "react-datepicker-persian": "^1.0.2",
     "react-dom": "^16.7.0",
     "react-files": "^2.4.8",
@@ -58,6 +59,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.2",
+    "universal-cookie": "^4.0.3",
     "validator": "^10.10.0"
   },
   "scripts": {
